2009-11-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-annotate-command): Make operation asynchronous.

2009-11-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* finder.el (finder-mode-map): Add a menu.

2009-11-26  Michael McNamara  <mac@mail.brushroad.com>

	* verilog-mode.el (verilog-at-struct-p): Support "signed" and
	"unsigned" structs.

	(verilog-leap-to-head, verilog-backward-token): Handle "disable
	fork" statement better.

2009-11-26  Wilson Snyder  <wsnyder@wsnyder.org>

	* verilog-mode.el (verilog-auto-insert-lisp, verilog-delete-auto)
	(verilog-delete-empty-auto-pair, verilog-library-filenames):
	Fix AUTOINSERTLISP to support insert-file.  Reported by Clay Douglass.

	(verilog-auto-inst, verilog-auto-star-safe)
	(verilog-delete-auto-star-implicit, verilog-read-sub-decls):
	Fix removing "// Interfaces" when saving .* expansions.  Reported by
	Pierre-David Pfister.

2009-11-26  Glenn Morris  <rgm@gnu.org>

	* eshell/em-dirs.el (eshell/cd): Don't throw to a tag outside
	the scope.

2009-11-25  Johan Bockgård  <bojohan@gnu.org>

	* vc-annotate.el (vc-annotate-revision-previous-to-line):
	Really use previous revision.

2009-11-25  Kevin Ryde  <user42@zip.com.au>

	* man.el (Man-completion-table): default-directory "/" in case
	doesn't otherwise exist.  process-environment COLUMNS=999 so as
	not to truncate long names.  process-connection-type pipe to avoid
	any chance of hitting the pseudo-tty TIOCGWINSZ.
	(man): completion-ignore-case t for friendliness and since man
	itself is case-insensitive on the command line.
	Further to Bug#3717.

	* arc-mode.el: Add "Keywords: files", so the details in its
	commentary can be reached from finder-by-keyword.
	* textmodes/dns-mode.el: Add "Keywords: comm".  It's only an
	editing mode, but it's comms related and sgml-mode.el has "comm"
	on that basis too.
	* textmodes/bibtex-style.el: Add "Keywords: tex".
	* international/isearch-x.el, international/ja-dic-cnv.el: